update: fix image alignement in slide

--- a/blocks/assets/css/core/image.css
+++ b/blocks/assets/css/core/image.css
@@ -1,5 +1,5 @@
 .wp-block-image {
-	height: 100%
+	max-height: 100%
 }
 
 .wp-block-image div,
